# semantic-search-api

./: .env.example  .gitignore  Makefile  README.md  api.py  compose.yml  db.sql  docker-compose.yml  embedding.py  main.py  pyproject.toml  setup_observability.sh
app/: embedding.py  main.py
config/grafana/dashboards/: product_search.json
config/grafana/provisioning/dashboards/: dashboards.yml
db/: schema.sql
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
